--- a/css.css
+++ b/css.css
@@ -1,14 +1,14 @@
 @import url('http://prob.cykor.kr:8082/flag');
 
-body::before {
+body::after {
     content: var(--flag);
-    font-family: LeakFont;
     display: block;
-    overflow: hidden;
-    width: 10px;
-    height: 18px;
-    white-space: nowrap;
-    text-indent: -6ch;  /* 정확히 7번째 글자만 보이도록 조정 */
+    overflow: hidden; /* 오직 보이는 부분만 렌더링됨 */
+    width: 1ch;       /* 정확히 한 글자 크기만큼 폭을 제한 */
+    white-space: nowrap; /* 한 줄 유지 */
+    letter-spacing: 0; /* 글자 사이 간격 0 */
+    text-indent: -6ch; /* 정확히 7번째 글자가 왼쪽에서 첫 번째로 오도록 이동 */
+    font-family: LeakFont;
 }
 
 /* 0-9일 경우 */
