--- a/css.css
+++ b/css.css
@@ -1,4 +1,4 @@
-@import url('http://localhost:8080/flag');
+@import url('http://prob.cykor.kr:8082/flag');
 
 /* #flag 요소에 FLAG 문자열을 넣고, 고정 폭 영역에서 좌우로 이동시킴 */
 #flag {
